--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-<html>
+<!doctype html>
+<html lang="en">  
+<head>    
+<meta charset="utf-8">    
+<title>All Food</title>  
+<link rel="stylesheet" href="styles.css">
+</head>   
+<header>      
+ <!-- Place holder for possible title<h1>title goes in here</h1>-->      
+</header>    
 
+<div class="item">
+    <img src="assets/fastfood.jpg" width="100" height="100" alt="Screen 2"/>
+    <p="caption">Burger</p>
+</div>
+<div class="item">
+    <img src="assets/greenfood.jpg"width="100" height="100" alt="Screen 3"/>    
+    <p="caption">Green</p>
+</div>
+
+</body>
 </html>
