Added More Code

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
  <!-- Place holder for possible title<h1>title goes in here</h1>-->      
 </header>    
 
+<!--Below will use css code to position pictures and word-->
 <div class="item">
-    <img src="assets/fastfood.jpg" width="100" height="100" alt="Screen 2"/>
-    <p="caption">Burger</p>
+    <img src="assets/fastfood.jpg" width="180" height="100" alt="Screen 2"/>
+    <p class="p">Burger $10</p>
 </div>
+
 <div class="item">
-    <img src="assets/greenfood.jpg"width="100" height="100" alt="Screen 3"/>    
-    <p="caption">Green</p>
+    <img src="assets/greenfood.jpg" width="180" height="100" alt="Screen 3"/>    
+    <p class="p">Green $15</p>
 </div>
 
 </body>
