--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <img src="assets/greenfood.jpg" width="180" height="100" alt="Screen 3"/>    
     <p class="p">Green $15</p>
 </div>
+ 
+ <div id="Price">Total:</div>
 
 </body>
 </html>
+
+<script type="text/javascript">
+	document.getElementById("Price").style.position="absolute";
+	document.getElementById("Price").style.left="1500px";
+</script>
