--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
 <meta charset="utf-8">    
 <title>All Food</title>  
 <link rel="stylesheet" href="styles.css">
+<script src="order.js"></script>
 </head>   
 <header>      
  <!-- Place holder for possible title<h1>title goes in here</h1>-->      
 </header>    
 
 <!--Below will use css code to position pictures and word-->
+<!--It will also use "input" to make the image clickable-->
 <div class="item">
-    <img src="assets/fastfood.jpg" width="180" height="100" alt="Screen 2"/>
-    <p class="p">Burger $10</p>
-</div>
+<input type="image" id="image" width="180" height="100" alt="Screen1"
+       src="assets/fastfood.jpg">
+       <p class="p">Burger $10</p>
+</div> 
 
 <div class="item">
-    <img src="assets/greenfood.jpg" width="180" height="100" alt="Screen 3"/>    
+<input type="image" id="image" width="180" heitght="100" alt="Screen2"
+		src="assets/greenfood.jpg">
     <p class="p">Green $15</p>
 </div>
- 
- <div id="Price">Total:</div>
+
+<div id="Price">Total</div>
 
 </body>
 </html>
-
 <script type="text/javascript">
 	document.getElementById("Price").style.position="absolute";
 	document.getElementById("Price").style.left="1500px";
