--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--It will also use "input" to make the image clickable-->
 <div class="item">
 <input type="image" id="image" width="180" height="100" alt="Screen1"
-       src="assets/fastfood.jpg">
+       src="mike-PxJ9zkM2wdA-unsplash.jpg">
        <p class="p">Burger $10</p>
 </div> 
 
