--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">    
 <title>All Food</title>  
 <link rel="stylesheet" href="styles.css">
-<script src="order.js"></script>
+
 </head>   
 <header>      
  <!-- Place holder for possible title<h1>title goes in here</h1>-->      
@@ -16,16 +16,21 @@
 <input type="image" id="image" width="180" height="100" alt="Screen1"
        src="assets/fastfood.jpg">
        <p class="p">Burger $10</p>
+       <button id="click">Add</button>
+       <button id="click">Remove</buttom>
+	
 </div> 
 
 <div class="item">
 <input type="image" id="image" width="180" heitght="100" alt="Screen2"
 		src="assets/greenfood.jpg">
     <p class="p">Green $15</p>
+       <button id="click">Add</button>
+       <button id="click">Remove</buttom>
 </div>
 
 <div id="Price">Total</div>
-
+<script src="order.js"></script>
 </body>
 </html>
 <script type="text/javascript">
