--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <link rel="stylesheet" href="styles.css">
 
 </head>   
-<header>      
- <!-- Place holder for possible title<h1>title goes in here</h1>-->      
+<header>
+  h1 style="font-size:300%; text-align:center;">֎ All Food ֎</h1>
+  <p style="font-size:160%; text-align:center;">The Best Food Fast.</p>
+	
 </header>    
 
 <!--Below will use css code to position pictures and word-->
