--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>   
 <header>
-  h1 style="font-size:300%; text-align:center;">֎ All Food ֎</h1>
+  h1 style="font-size:300%; text-align:center;">৩ All Food ৩</h1>
   <p style="font-size:160%; text-align:center;">The Best Food Fast.</p>
 	
 </header>    
