--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!--Sides-->
   <div class="menu-item menu-side-1">
-  <input type="image" id="image" width="180" heitght="100" alt="Screen2"
+  <input type="image" id="image" width="180" height="100" alt="Screen2"
 		src="assets/sideSPFries.jpg">
     <p class="p">Sweet Potato Fries $3</p>
        <button id="click">Add</button>
@@ -48,7 +48,7 @@
   </div>
 
   <div class="menu-item menu-side-1">
-    <input type="image" id="image" width="180" heitght="100" alt="Screen2"
+    <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sideMac.jpg">
       <p class="p">Mac & Cheese $3</p>
          <button id="click">Add</button>
@@ -56,7 +56,7 @@
     </div>
 
   <div class="menu-item menu-side-1">
-    <input type="image" id="image" width="180" heitght="100" alt="Screen2"
+    <input type="image" id="image" width="180" height="100" alt="Screen2"
        src="assets/sideSalad.jpg">
       <p class="p">Salad $2</p>
         <button id="click">Add</button>
@@ -65,7 +65,7 @@
 
   <!--Drinks-->
   <div class="menu-item menu-drink-1">
-  <input type="image" id="image" width="180" heitght="100" alt="Screen2"
+  <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sodaImage1.jpg">
       <p class="p">Coke $2</p>
          <button id="click">Add</button>
@@ -73,7 +73,7 @@
   </div>
 
   <div class="menu-item menu-drink-1">
-    <input type="image" id="image" width="180" heitght="100" alt="Screen2"
+    <input type="image" id="image" width="180" height="100" alt="Screen2"
         src="assets/sodaImage2.jpg">
         <p class="p">Pepsi $2</p>
            <button id="click">Add</button>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="menu-item menu-drink-1">
-      <input type="image" id="image" width="180" heitght="100" alt="Screen2"
+      <input type="image" id="image" width="180" height="100" alt="Screen2"
           src="assets/sodaImage3.jpg">
           <p class="p">Dr. Pepper $2</p>
              <button id="click">Add</button>
