--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
   <input type="image" id="image" width="180" height="100" alt="Screen1"
        src="assets/fastfood.jpg">
        <p class="p">Burger $10</p>
-       <button id="click">Add</button>
-       <button id="click">Remove</button>
+       <button id="1">Add</button>
+       <button id="12">Remove</button>
   </div> 
 
   <div class="menu-item menu-main-1">
     <input type="image" id="image" width="180" height="100" alt="Screen1"
          src="assets/meatballs.jpg">
          <p class="p">Meat Balls $12</p>
-         <button id="click">Add</button>
-         <button id="click">Remove</button>
+         <button id="2">Add</button>
+         <button id="22">Remove</button>
     </div> 
 
   <div class="menu-item menu-main-1">
     <input type="image" id="image" width="180" height="100" alt="Screen1"
          src="assets/salmonSpread.jpg">
          <p class="p">Salmon $8</p>
-         <button id="click">Add</button>
-          <button id="click">Remove</button>
+         <button id="3">Add</button>
+          <button id="32">Remove</button>
   </div> 
 
   <!--Sides-->
@@ -43,24 +43,24 @@
   <input type="image" id="image" width="180" height="100" alt="Screen2"
 		src="assets/sideSPFries.jpg">
     <p class="p">Sweet Potato Fries $3</p>
-       <button id="click">Add</button>
-       <button id="click">Remove</button>
+       <button id="4">Add</button>
+       <button id="42">Remove</button>
   </div>
 
   <div class="menu-item menu-side-1">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sideMac.jpg">
       <p class="p">Mac & Cheese $3</p>
-         <button id="click">Add</button>
-         <button id="click">Remove</button>
+         <button id="5">Add</button>
+         <button id="52">Remove</button>
     </div>
 
   <div class="menu-item menu-side-1">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
        src="assets/sideSalad.jpg">
       <p class="p">Salad $2</p>
-        <button id="click">Add</button>
-        <button id="click">Remove</button>
+        <button id="6">Add</button>
+        <button id="62">Remove</button>
   </div>
 
   <!--Drinks-->
@@ -68,31 +68,30 @@
   <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sodaImage1.jpg">
       <p class="p">Coke $2</p>
-         <button id="click">Add</button>
-         <button id="click">Remove</button>
+         <button id="7">Add</button>
+         <button id="72">Remove</button>
   </div>
 
   <div class="menu-item menu-drink-1">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
         src="assets/sodaImage2.jpg">
         <p class="p">Pepsi $2</p>
-           <button id="click">Add</button>
-           <button id="click">Remove</button>
+           <button id="8">Add</button>
+           <button id="82">Remove</button>
     </div>
 
     <div class="menu-item menu-drink-1">
       <input type="image" id="image" width="180" height="100" alt="Screen2"
           src="assets/sodaImage3.jpg">
           <p class="p">Dr. Pepper $2</p>
-             <button id="click">Add</button>
-             <button id="click">Remove</button>
+             <button id="9">Add</button>
+             <button id="92">Remove</button>
       </div>
 </div>
+<h1 id="test"></h1>
 <div id="Price">Total</div>
+
 <script src="order.js"></script>
+
 </body>
 </html>
-<script type="text/javascript">
-	document.getElementById("Price").style.position="absolute";
-	document.getElementById("Price").style.left="1500px";
-</script>
