--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>   
 <header>
   <h1 style="font-size:300%; text-align:center;"> All Food </h1>
-  <p style="font-size:160%; text-align:center;">The Best Food Fast.</p>
+  <p style="font-size:160%; text-align:center;">The Best Food. Fast.</p>
 </header>   
 
 <body>
+
 <div class="menu-grid">
 
   <!--Main Dishes-->
@@ -22,7 +23,7 @@
        <button id="click">Remove</button>
   </div> 
 
-  <div class="menu-item menu-main-1">
+  <div class="menu-item menu-main-2">
     <input type="image" id="image" width="180" height="100" alt="Screen1"
          src="assets/meatballs.jpg">
          <p class="p">Meat Balls $12</p>
@@ -30,7 +31,7 @@
          <button id="click">Remove</button>
     </div> 
 
-  <div class="menu-item menu-main-1">
+  <div class="menu-item menu-main-3">
     <input type="image" id="image" width="180" height="100" alt="Screen1"
          src="assets/salmonSpread.jpg">
          <p class="p">Salmon $8</p>
@@ -47,7 +48,7 @@
        <button id="click">Remove</button>
   </div>
 
-  <div class="menu-item menu-side-1">
+  <div class="menu-item menu-side-2">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sideMac.jpg">
       <p class="p">Mac & Cheese $3</p>
@@ -55,7 +56,7 @@
          <button id="click">Remove</button>
     </div>
 
-  <div class="menu-item menu-side-1">
+  <div class="menu-item menu-side-3">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
        src="assets/sideSalad.jpg">
       <p class="p">Salad $2</p>
@@ -72,22 +73,23 @@
          <button id="click">Remove</button>
   </div>
 
-  <div class="menu-item menu-drink-1">
+  <div class="menu-item menu-drink-2">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
         src="assets/sodaImage2.jpg">
         <p class="p">Pepsi $2</p>
            <button id="click">Add</button>
            <button id="click">Remove</button>
-    </div>
+  </div>
 
-    <div class="menu-item menu-drink-1">
+    <div class="menu-item menu-drink-3">
       <input type="image" id="image" width="180" height="100" alt="Screen2"
           src="assets/sodaImage3.jpg">
           <p class="p">Dr. Pepper $2</p>
              <button id="click">Add</button>
              <button id="click">Remove</button>
-      </div>
+    </div>
 </div>
+
 <div id="Price">Total</div>
 <script src="order.js"></script>
 </body>
