--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
              <button id="92">Remove</button>
       </div>
 </div>
-<h1 id="test"></h1>
+
+<div id="Item">Item</div>
 <div id="Price">Total</div>
 
 <script src="order.js"></script>
