--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--FR1.0 Below will generate HTML page create to house restaurant menu-->
 <!doctype html>
 <html lang="en">  
 <head>    
@@ -13,53 +14,72 @@
 <body>
 <div class="menu-grid">
 
+  <!--FR1.2 Below will display menu items for customer to view-->
   <!--Main Dishes-->
   <div class="menu-item menu-main-1">
   <input type="image" id="image" width="180" height="100" alt="Screen1"
        src="assets/fastfood.jpg">
+       <!--FR1.4 Below will display price for user to see-->
        <p class="p">Burger $10</p>
+       <!--FR1.51 Add items to menu-->
        <button id="1">Add</button>
+       <!--FR1.52 Remove items to menu-->
        <button id="12">Remove</button>
   </div> 
 
   <div class="menu-item menu-main-1">
     <input type="image" id="image" width="180" height="100" alt="Screen1"
          src="assets/meatballs.jpg">
+         <!--FR1.4 Below will display price for user to see-->
          <p class="p">Meat Balls $12</p>
+          <!--FR1.51 Add items to menu-->
          <button id="2">Add</button>
+         <!--FR1.52 Remove items to menu-->
          <button id="22">Remove</button>
     </div> 
 
   <div class="menu-item menu-main-1">
     <input type="image" id="image" width="180" height="100" alt="Screen1"
          src="assets/salmonSpread.jpg">
+         <!--FR1.4 Below will display price for user to see-->
          <p class="p">Salmon $8</p>
+         <!--FR1.51 Add items to menu-->
          <button id="3">Add</button>
-          <button id="32">Remove</button>
+         <!--FR1.52 Remove items to menu-->
+        <button id="32">Remove</button>
   </div> 
 
   <!--Sides-->
   <div class="menu-item menu-side-1">
   <input type="image" id="image" width="180" height="100" alt="Screen2"
 		src="assets/sideSPFries.jpg">
+    <!--FR1.4 Below will display price for user to see-->
     <p class="p">Sweet Potato Fries $3</p>
+    <!--FR1.51 Add items to menu-->
        <button id="4">Add</button>
+       <!--FR1.52 Remove items to menu-->
        <button id="42">Remove</button>
   </div>
 
   <div class="menu-item menu-side-1">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sideMac.jpg">
+      <!--FR1.4 Below will display price for user to see-->
       <p class="p">Mac & Cheese $3</p>
+      <!--FR1.51 Add items to menu-->
          <button id="5">Add</button>
+         <!--FR1.52 Remove items to menu-->
          <button id="52">Remove</button>
     </div>
 
   <div class="menu-item menu-side-1">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
        src="assets/sideSalad.jpg">
+       <!--FR1.4 Below will display price for user to see-->
       <p class="p">Salad $2</p>
+      <!--FR1.51 Add items to menu-->
         <button id="6">Add</button>
+        <!--FR1.52 Remove items to menu-->
         <button id="62">Remove</button>
   </div>
 
@@ -67,29 +87,39 @@
   <div class="menu-item menu-drink-1">
   <input type="image" id="image" width="180" height="100" alt="Screen2"
       src="assets/sodaImage1.jpg">
+      <!--FR1.4 Below will display price for user to see-->
       <p class="p">Coke $2</p>
+      <!--FR1.51 Add items to menu-->
          <button id="7">Add</button>
+         <!--FR1.52 Remove items to menu-->
          <button id="72">Remove</button>
   </div>
 
   <div class="menu-item menu-drink-1">
     <input type="image" id="image" width="180" height="100" alt="Screen2"
         src="assets/sodaImage2.jpg">
+        <!--FR1.4 Below will display price for user to see-->
         <p class="p">Pepsi $2</p>
+        <!--FR1.51 Add items to menu-->
            <button id="8">Add</button>
+           <!--FR1.52 Remove items to menu-->
            <button id="82">Remove</button>
     </div>
 
     <div class="menu-item menu-drink-1">
       <input type="image" id="image" width="180" height="100" alt="Screen2"
           src="assets/sodaImage3.jpg">
+          <!--FR1.4 Below will display price for user to see-->
           <p class="p">Dr. Pepper $2</p>
+          <!--FR1.51 Add items to menu-->
              <button id="9">Add</button>
+             <!--FR1.52 Remove items to menu-->
              <button id="92">Remove</button>
       </div>
 </div>
 
 <div id="Item">Item</div>
+<div id="Tax">Tax</div>
 <div id="Price">Total</div>
 
 <script src="order.js"></script>
